--- a/login.html
+++ b/login.html
@@ -59,7 +59,7 @@
                     </div>
 
                     <div class="btn_area">
-                        <button id="loginBtn" type="submit" class="btn btn_full">Login</button>
+                        <button id="loginBtn" type="submit" class="btn btn_full" onclick="check_onclick()" value="check">Login</button>
                     </div>
                 </div>
             </form>
@@ -80,7 +80,7 @@
         </div>
 
     </footer>
-
+<script src="./js/login.js"></script>
 </body>
 
 </html>
