--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-
-
 </head>
 
 <body>
 
 
-    <!-- 헤더 -->
+    <!-- Header -->
     <div class="header_top">
         <header>
 
@@ -35,7 +33,7 @@
         </header>
     </div>
 
-    <!-- 중간슬라이더 -->
+    <!-- Img Slider -->
     <div class="middle slider swiper-container">
         <div class="swiper-wrapper">
             <div class="swiper-slide mainbanner_slide">
@@ -54,7 +52,7 @@
     </div>
 
 
-    <!-- 메인 -->
+    <!-- Main -->
     <div class="main">
         <div class="main_top" style="position: relative;">
             <div class="mainpagetitle">메인메뉴</div>
@@ -65,8 +63,9 @@
             </ul>
         </div>
 
-        <!-- 메인메뉴 -->
-        <div class="slider slider-content mainMenu" style="    display: flex;">
+        <!-- Title -->
+             <!-- content_1 -->
+        <div class="slider slider-content mainMenu" style="display: flex;">
             <div class="menu_box">
                 <img src="https://www.yupdduk.com/bod/config/menu/%EC%97%BD%EA%B8%B0%EB%A9%94%EB%89%B4_6_1_1_1_1.png"
                     alt="" onClick="location.href='detail.html'">
@@ -89,8 +88,8 @@
             </div>
         </div>
 
-        <!-- 닭발메뉴 -->
-        <div class="slider slider-content chickenMenu" style="    display: flex;">
+             <!-- content_2 -->
+        <div class="slider slider-content chickenMenu" style="display: flex;">
             <div class="menu_box">
                 <img src="https://www.yupdduk.com/bod/config/menu/%EC%97%BD%EA%B8%B0%EB%AC%B4%EB%BC%88%EB%8B%AD%EB%B0%9C_4_1_1_1_1.png"
                     alt="" onClick="location.href='detail.html'">
@@ -108,8 +107,8 @@
             </div>
         </div>
 
-        <!-- 토핑 -->
-        <div class="slider slider-content toppingMenu" style="    display: flex;">
+             <!-- content_3 -->
+        <div class="slider slider-content toppingMenu" style="display: flex;">
             <div class="menu_box">
                 <img src="https://www.yupdduk.com/bod/config/menu/24.02.22%20%EC%BD%98%EB%A7%88%EC%9A%94%20500x500_2_1_1.png"
                     alt="" onClick="location.href='detail.html'">
@@ -132,7 +131,7 @@
             </div>
         </div>
     </div>
-    <!-- 푸터 -->
+    <!-- Footer -->
     <footer>
         <div class="footlogo">
             <img src="./img/logo.png" alt="" onClick="location.href='index.html'">
@@ -147,7 +146,7 @@
     </footer>
     <script src="./js/main.js"></script>
     
-<!-- Swiper JS -->
+<!-- 스와이퍼 js -->
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </body>
 
