--- a/detail.html
+++ b/detail.html
@@ -11,14 +11,12 @@
 </head>
 
 <body>
-    <!-- 헤더 -->
+    <!-- Header -->
     <div class="header_top">
         <header>
-
             <div class="header_logo">
                 <img src="./img/logo.png" alt="" onClick="location.href='index.html'">
             </div>
-
             <p class="header_login" onClick="location.href='login.html'">로그인 | 회원가입</p>
             <ul>
                 <li>메뉴안내</li>
@@ -27,28 +25,30 @@
                 <li>고객안내</li>
                 <li>가맹문의</li>
             </ul>
-
         </header>
     </div>
-    <!-- 상세 -->
+
+
+    <!-- Detail -->
     <div class="container_1">
         <img class="detail_img"
             src="https://www.yupdduk.com/bod/config/menu/%EC%97%BD%EA%B8%B0%EB%A9%94%EB%89%B4_6_1_1_1_1.png" alt="">
         <div class="minicon">
             <div class="poptitle">대표 떡볶잉 14,000원 </div>
             <p>떡볶이/오뎅/반반 中 선택</br>(떡볶이 → 분모자 변경 시 + 3,000원)</p>
-
             <img class="mat_img" src="https://www.yupdduk.com/bod/config/menu/Group156_14_1_1_1_1.png" alt="맛 이미지">
-
             <div class="btn_area" style="    margin-top: 55px;">
-                <button id="storeBtn" type="submit" class="btn btn_full"  onclick="alert('지점 아직없음 !');return false;">지점 찾으러가기 ></button>
-                <button id="orderBtn" type="submit" class="btn btn_full"  onclick="alert('품절 되었습니다!');return false;">주문하러가기 ></button>
+                <!-- 버튼1 -->
+                <button id="storeBtn" type="submit" class="btn btn_full" onclick="alert('지점 아직없음 !');return false;">지점 찾으러가기 ></button>
+                <!-- 버튼 2 -->
+                <button id="orderBtn" type="submit" class="btn btn_full"
+                    onclick="alert('품절 되었습니다!');return false;">주문하러가기 ></button> 
             </div>
         </div>
-
-
     </div>
-    <!-- 푸터 -->
+
+
+    <!-- Footer -->
     <footer>
         <div class="footlogo">
             <img src="./img/logo.png" alt="" onClick="location.href='index.html'">
@@ -59,9 +59,6 @@
             <p>법적고지</p>
             <p>영상정보처리기기운영/관리</p>
         </div>
-
     </footer>
-
 </body>
-
 </html>
