--- a/member.html
+++ b/member.html
@@ -10,15 +10,15 @@
 </head>
 
 <body>
-    <!-- 헤더 -->
+    <!-- Header -->
     <div class="header_top">
         <header>
 
             <div class="header_logo">
-                <img src="./img/logo.png" alt="" onClick= "location.href='index.html'">
+                <img src="./img/logo.png" alt="" onClick="location.href='index.html'">
             </div>
-            <p class="header_login" onClick= "location.href='login.html'" >로그인 |</p>
-            <p class="header_member" onClick= "location.href='member.html'">회원가입</p>
+            <p class="header_login" onClick="location.href='login.html'">로그인 |</p>
+            <p class="header_member" onClick="location.href='member.html'">회원가입</p>
             <ul>
                 <li>메뉴안내</li>
                 <li>이벤트안내</li>
@@ -29,7 +29,8 @@
 
         </header>
     </div>
-    <!-- 메인 -->
+
+    <!-- 회원가입폼 -->
     <div class="main">
         <div class="content">
             <h2 id="welcomeMessage" class="h_tit h_tit4" style="display:none;"></h2>
@@ -40,32 +41,33 @@
             <form id="JoinForm" name="JoinForm" method="post">
                 <div>
                     <div class="intro_logo">
-                        <img src="./img/logo.png" alt="" onClick= "location.href='index.html'">
+                        <img src="./img/logo.png" alt="" onClick="location.href='index.html'">
                     </div>
                     <legend>회원가입 정보를 입력해주세요</legend>
                     <div class="login_inp_area">
-                        <div >
+                        <div>
                             <p style=" font-size: 13px; color: gray;">아이디</p>
                             <span>
                                 <input type="text" id="id" name="id" class="inp" autocapitalize="off" title="아이디(이메일)"
                                     placeholder="아이디(이메일)" value="" maxlength="45" autocomplete="off">
                             </span>
-                        
+
                         </div>
-                        <p style=" font-size: 13px; color: gray;" >비밀번호</p>
+                        <p style=" font-size: 13px; color: gray;">비밀번호</p>
                         <span class="inp_bx">
-                            <input type="password" id="password" name="password" class="inp" title="비밀번호" placeholder="비밀번호"
-                                maxlength="20" style="ime-mode:disabled;"  value=""> 
+                            <input type="password" id="password" name="password" class="inp" title="비밀번호"
+                                placeholder="비밀번호" maxlength="20" style="ime-mode:disabled;" value="">
                         </span>
                         <p style=" font-size: 13px; color: gray;">비밀번호 재확인</p>
                         <span class="inp_bx">
-                            <input type="password" id="password_1"  name="password_1" value="" class="inp" title="비밀번호 재확인" placeholder="비밀번호 재확인"
-                                maxlength="20" style="ime-mode:disabled;">
+                            <input type="password" id="password_1" name="password_1" value="" class="inp"
+                                title="비밀번호 재확인" placeholder="비밀번호 재확인" maxlength="20" style="ime-mode:disabled;">
                         </span>
                     </div>
-
+                    <!-- Join 버튼 -->
                     <div class="btn_area">
-                        <button id="loginBtn" type="submit" class="btn btn_full"  onclick="memcheck_onclick()">Join</button>
+                        <button id="loginBtn" type="submit" class="btn btn_full"
+                            onclick="memcheck_onclick()">Join</button>
                     </div>
                 </div>
             </form>
@@ -73,10 +75,11 @@
 
         </div>
     </div>
-    <!-- 푸터 -->
+
+    <!-- Footer -->
     <footer>
         <div class="footlogo">
-            <img src="./img/logo.png" alt="" onClick= "location.href='index.html'">
+            <img src="./img/logo.png" alt="" onClick="location.href='index.html'">
         </div>
         <div class="footinfo">
             <p>이용약관</p>
@@ -86,7 +89,7 @@
         </div>
 
     </footer>
-<script src="./js/login.js"></script>
+    <script src="./js/login.js"></script>
 </body>
 
 </html>
